syntax = "proto3";

package payload;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";


message Meta {
    uint32 Polymorph = 16;

    bytes Payload    = 20;
    bytes Sender     = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Receiver   = 22 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Pulse      = 23 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.PulseNumber", (gogoproto.nullable) = false];
    bytes OriginHash = 42;
}

message Error {
    uint32 Polymorph = 16;

    uint32 Code = 20;
    string Text = 21;
}

message Object {
    uint32 Polymorph = 16;

    bytes ObjectID     = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    bytes StateID      = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    bytes Prototype    = 22 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bytes Parent       = 23 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    bool IsPrototype   = 24;
    bytes ChildPointer = 25 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    bytes Memory       = 26;
}

message State {
    uint32 Polymorph = 16;

    bytes Record   = 20;
    bytes Memory   = 21;
}

message GetObject {
    uint32 Polymorph = 16;

    bytes ObjectID        = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    bytes ObjectRequestID = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
}

message PassState {
    uint32 Polymorph = 16;

    bytes Origin   = 20;
    bytes StateID  = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
    bytes CorrelationID = 22;
}

message Pass {
    uint32 Polymorph = 16;

    bytes Origin   = 20;
    bytes CorrelationID = 22;
}

message SetRecord {
    uint32 Polymorph = 16;

    bytes Record = 20;
}

message Index {
    uint32 Polymorph = 16;

    bytes Index = 20;
}

message ID {
    uint32 Polymorph = 16;

    bytes ID = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ID", (gogoproto.nullable) = false];
}

message Jet {
    uint32 Polymorph = 16;

    bytes JetID = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.JetID", (gogoproto.nullable) = false];
    bytes Pulse = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.PulseNumber", (gogoproto.nullable) = false];
}
